# flagman

./: .env.example  .gitignore  docker-compose.yml  justfile  pyproject.toml
.github/workflows/: ci.yml
experiments/: 01-dataset-feasibility.ipynb
src/flagman/: __init__.py
tests/: test_sanity.py
