[project]
name = "flagman"
version = "0.1.0"
description = "Real-time payment fraud detection for UK faster payments"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.8"]

[build-system]
requires = ["uv_build>=0.11,<0.12"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
markers = ["integration: requires docker services"]
testpaths = ["tests"]
